--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
     },
     "keywords": [],
     "scripts": {},
-    "dependencies": {},
-    "devDependencies": {}
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.52.0",
+        "@typescript-eslint/parser": "^5.52.0",
+        "eslint": "^8.34.0",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-tsdoc": "^0.2.17",
+        "prettier": "^2.8.4",
+        "typescript": "^4.9.5"
+    }
 }
