Set up main project.

--- a/package.json
+++ b/package.json
@@ -20,13 +20,33 @@
     "keywords": [],
     "scripts": {},
     "devDependencies": {
+        "@types/node": "^18.14.0",
         "@typescript-eslint/eslint-plugin": "^5.52.0",
         "@typescript-eslint/parser": "^5.52.0",
-        "eslint": "^8.34.0",
+        "css-loader": "^6.7.3",
+        "cssnano": "^5.1.15",
+        "enhanced-resolve": "^5.12.0",
         "eslint-config-prettier": "^8.6.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-tsdoc": "^0.2.17",
+        "eslint-webpack-plugin": "^4.0.0",
+        "eslint": "^8.34.0",
+        "fork-ts-checker-webpack-plugin": "^7.3.0",
+        "postcss-loader": "^7.0.2",
+        "postcss": "^8.4.21",
         "prettier": "^2.8.4",
-        "typescript": "^4.9.5"
+        "pug-plugin": "^4.9.4",
+        "rimraf": "^4.1.2",
+        "sass-loader": "^13.2.0",
+        "sass": "^1.58.3",
+        "source-map-loader": "^4.0.1",
+        "ts-loader": "^9.4.2",
+        "ts-node": "^10.9.1",
+        "tsconfig-paths-webpack-plugin": "^4.0.0",
+        "typescript": "^4.9.5",
+        "webpack-cli": "^5.0.1",
+        "webpack-dev-server": "^4.11.1",
+        "webpack-merge": "^5.8.0",
+        "webpack": "^5.75.0"
     }
 }
