--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "scripts": {
         "lint": "eslint --ext .ts ./src/ts/",
         "dev": "webpack-dev-server --config-name dev",
-        "build": "pnpm run build:prod",
+        "build": "npm run build:prod",
         "build:prod": "webpack-cli --config-name prod",
         "build:dev": "webpack-cli --config-name dev",
         "clean": "rimraf ./dist/",
-        "rebuild": "pnpm run clean && pnpm run build",
-        "rebuild:prod": "pnpm run clean && pnpm run build:prod",
-        "rebuild:dev": "pnpm run clean && pnpm run build:dev"
+        "rebuild": "npm run clean && npm run build",
+        "rebuild:prod": "npm run clean && npm run build:prod",
+        "rebuild:dev": "npm run clean && npm run build:dev"
     },
     "devDependencies": {
         "@types/node": "^18.14.0",
